--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -112,3 +112,101 @@
   preview={wave-mechanics.gif},
   abbr={Vision}
 }
+@article{hackl2023novel,
+  title={Novel integrative elements and genomic plasticity in ocean ecosystems},
+  author={Hackl, Thomas and Laurenceau, Rapha{\"e}l and Ankenbrand, Markus J and Bliem, Christina and Cariani, Zev and Thomas, Elaina and Dooley, Keven D and Arellano, Aldo A and Hogle, Shane L and Berube, Paul and others},
+  journal={Cell},
+  volume={186},
+  number={1},
+  pages={47--62},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{kremer2018gradual,
+  title={Gradual plasticity alters population dynamics in variable environments: thermal acclimation in the green alga Chlamydomonas reinhartdii},
+  author={Kremer, Colin T and Fey, Samuel B and Arellano, Aldo A and Vasseur, David A},
+  journal={Proceedings of the Royal Society B: Biological Sciences},
+  volume={285},
+  number={1870},
+  pages={20171942},
+  year={2018},
+  publisher={The Royal Society}
+}
+
+@article{biller2022prochlorococcus,
+  title={Prochlorococcus extracellular vesicles: molecular composition and adsorption to diverse microbes},
+  author={Biller, Steven J and Lundeen, Rachel A and Hmelo, Laura R and Becker, Kevin W and Arellano, Aldo A and Dooley, Keven and Heal, Katherine R and Carlson, Laura T and Van Mooy, Benjamin AS and Ingalls, Anitra E and others},
+  journal={Environmental Microbiology},
+  volume={24},
+  number={1},
+  pages={420--435},
+  year={2022},
+  publisher={Wiley Online Library}
+}
+
+@article{arellano2024inquiline,
+  title={An inquiline mosquito modulates microbial diversity and function in an aquatic microecosystem},
+  author={Arellano, Aldo A and Young, Erica B and Coon, Kerri L},
+  journal={Molecular Ecology},
+  volume={33},
+  number={7},
+  pages={e17314},
+  year={2024},
+  publisher={Wiley Online Library}
+}
+
+@article{biller2023environmental,
+  title={Environmental and taxonomic drivers of bacterial extracellular vesicle production in marine ecosystems},
+  author={Biller, Steven J and Coe, Allison and Arellano, Aldo A and Dooley, Keven and Silvestri, Samantha M and Gong, Jacqueline S and Yeager, Emily A and Becker, Jamie W and Chisholm, Sallie W},
+  journal={Applied and Environmental Microbiology},
+  volume={89},
+  number={6},
+  pages={e00594--23},
+  year={2023},
+  publisher={Am Soc Microbiol}
+}
+
+@article{arellano2023beyond,
+  title={Beyond canonical models: why a broader understanding of Diptera-microbiota interactions is essential for vector-borne disease control},
+  author={Arellano, Aldo A and Sommer, Andrew J and Coon, Kerri L},
+  journal={Evolutionary ecology},
+  volume={37},
+  number={1},
+  pages={165--188},
+  year={2023},
+  publisher={Springer}
+}
+
+@article{coe2021coping,
+  title={Coping with darkness: The adaptive response of marine picocyanobacteria to repeated light energy deprivation},
+  author={Coe, Allison and Biller, Steven J and Thomas, Elaina and Boulias, Konstantinos and Bliem, Christina and Arellano, Aldo and Dooley, Keven and Rasmussen, Anna N and LeGault, Kristen and O'Keefe, Tyler J and others},
+  journal={Limnology and Oceanography},
+  volume={66},
+  number={9},
+  pages={3300--3312},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+@article{arellano2022bacterial,
+  title={Bacterial communities in carnivorous pitcher plants colonize and persist in inquiline mosquitoes},
+  author={Arellano, Aldo A and Coon, Kerri L},
+  journal={Animal Microbiome},
+  volume={4},
+  number={1},
+  pages={13},
+  year={2022},
+  publisher={Springer}
+}
+
+@article{laurenceau2021frequency,
+  title={Frequency of mispackaging of Prochlorococcus DNA by cyanophage},
+  author={Laurenceau, Rapha{\"e}l and Raho, Nicolas and Forget, Mathieu and Arellano, Aldo A and Chisholm, Sallie W},
+  journal={The ISME journal},
+  volume={15},
+  number={1},
+  pages={129--140},
+  year={2021},
+  publisher={Oxford University Press}
+}
