--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -112,16 +112,6 @@
   preview={wave-mechanics.gif},
   abbr={Vision}
 }
-@article{hackl2023novel,
-  title={Novel integrative elements and genomic plasticity in ocean ecosystems},
-  author={Hackl, Thomas and Laurenceau, Rapha{\"e}l and Ankenbrand, Markus J and Bliem, Christina and Cariani, Zev and Thomas, Elaina and Dooley, Keven D and Arellano, Aldo A and Hogle, Shane L and Berube, Paul and others},
-  journal={Cell},
-  volume={186},
-  number={1},
-  pages={47--62},
-  year={2023},
-  publisher={Elsevier}
-}
 
 @article{kremer2018gradual,
   title={Gradual plasticity alters population dynamics in variable environments: thermal acclimation in the green alga Chlamydomonas reinhartdii},
@@ -134,6 +124,26 @@
   publisher={The Royal Society}
 }
 
+@article{coe2021coping,
+  title={Coping with darkness: The adaptive response of marine picocyanobacteria to repeated light energy deprivation},
+  author={Coe, Allison and Biller, Steven J and Thomas, Elaina and Boulias, Konstantinos and Bliem, Christina and Arellano, Aldo and Dooley, Keven and Rasmussen, Anna N and LeGault, Kristen and O'Keefe, Tyler J and others},
+  journal={Limnology and oceanography},
+  volume={66},
+  number={9},
+  pages={3300--3312},
+  year={2021},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+}
+
+@article{laurenceau2020frequency,
+  title={Frequency of mispackaging of Prochlorococcus DNA by cyanophage},
+  author={Laurenceau, Rapha{\"e}l and Raho, Nicolas and Forget, Mathieu and Arellano, Aldo A and Chisholm, Sallie W},
+  journal={The ISME Journal},
+  pages={1--12},
+  year={2020},
+  publisher={Nature Publishing Group}
+}
+
 @article{biller2022prochlorococcus,
   title={Prochlorococcus extracellular vesicles: molecular composition and adsorption to diverse microbes},
   author={Biller, Steven J and Lundeen, Rachel A and Hmelo, Laura R and Becker, Kevin W and Arellano, Aldo A and Dooley, Keven and Heal, Katherine R and Carlson, Laura T and Van Mooy, Benjamin AS and Ingalls, Anitra E and others},
@@ -142,18 +152,18 @@
   number={1},
   pages={420--435},
   year={2022},
-  publisher={Wiley Online Library}
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
 }
 
-@article{arellano2024inquiline,
-  title={An inquiline mosquito modulates microbial diversity and function in an aquatic microecosystem},
-  author={Arellano, Aldo A and Young, Erica B and Coon, Kerri L},
-  journal={Molecular Ecology},
-  volume={33},
-  number={7},
-  pages={e17314},
-  year={2024},
-  publisher={Wiley Online Library}
+@article{hackl2023novel,
+  title={Novel integrative elements and genomic plasticity in ocean ecosystems},
+  author={Hackl, Thomas and Laurenceau, Rapha{\"e}l and Ankenbrand, Markus J and Bliem, Christina and Cariani, Zev and Thomas, Elaina and Dooley, Keven D and Arellano, Aldo A and Hogle, Shane L and Berube, Paul and others},
+  journal={Cell},
+  volume={186},
+  number={1},
+  pages={47--62},
+  year={2023},
+  publisher={Elsevier}
 }
 
 @article{biller2023environmental,
@@ -164,29 +174,7 @@
   number={6},
   pages={e00594--23},
   year={2023},
-  publisher={Am Soc Microbiol}
-}
-
-@article{arellano2023beyond,
-  title={Beyond canonical models: why a broader understanding of Diptera-microbiota interactions is essential for vector-borne disease control},
-  author={Arellano, Aldo A and Sommer, Andrew J and Coon, Kerri L},
-  journal={Evolutionary ecology},
-  volume={37},
-  number={1},
-  pages={165--188},
-  year={2023},
-  publisher={Springer}
-}
-
-@article{coe2021coping,
-  title={Coping with darkness: The adaptive response of marine picocyanobacteria to repeated light energy deprivation},
-  author={Coe, Allison and Biller, Steven J and Thomas, Elaina and Boulias, Konstantinos and Bliem, Christina and Arellano, Aldo and Dooley, Keven and Rasmussen, Anna N and LeGault, Kristen and O'Keefe, Tyler J and others},
-  journal={Limnology and Oceanography},
-  volume={66},
-  number={9},
-  pages={3300--3312},
-  year={2021},
-  publisher={Wiley Online Library}
+  publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
 }
 
 @article{arellano2022bacterial,
@@ -197,16 +185,54 @@
   number={1},
   pages={13},
   year={2022},
-  publisher={Springer}
+  publisher={BioMed Central London}
 }
 
-@article{laurenceau2021frequency,
-  title={Frequency of mispackaging of Prochlorococcus DNA by cyanophage},
-  author={Laurenceau, Rapha{\"e}l and Raho, Nicolas and Forget, Mathieu and Arellano, Aldo A and Chisholm, Sallie W},
-  journal={The ISME journal},
-  volume={15},
+@article{arellano2023beyond,
+  title={Beyond canonical models: why a broader understanding of Diptera-microbiota interactions is essential for vector-borne disease control},
+  author={Arellano, Aldo A and Sommer, Andrew J and Coon, Kerri L},
+  journal={Evolutionary ecology},
+  volume={37},
   number={1},
-  pages={129--140},
-  year={2021},
-  publisher={Oxford University Press}
+  pages={165--188},
+  year={2023},
+  publisher={Springer International Publishing Cham}
 }
+
+@article{becker2023novel,
+  title={Novel isolates expand the physiological diversity of Prochlorococcus and illuminate its macroevolution},
+  author={Becker, Jamie W and Pollak, Shaul and Berta-Thompson, Jessie W and Becker, Kevin W and Braakman, Rogier and Dooley, Keven D and Hackl, Thomas and Coe, Allison and Arellano, Aldo and LeGault, Kristen N and others},
+  journal={bioRxiv},
+  pages={2023--12},
+  year={2023},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{braakman2024global,
+  title={Global niche partitioning of purine and pyrimidine cross-feeding among ocean microbes},
+  author={Braakman, Rogier and Satinsky, Brandon and O'Keefe, Tyler J and Longnecker, Krista and Becker, Jamie W and Dooley, Keven and Hogle, Shane L and Arellano, Aldo and Kido Soule, Melissa C and Kujawinski, Elizabeth B and others},
+  journal={bioRxiv},
+  pages={2024--02},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{arellano2024inquiline,
+  title={An inquiline mosquito modulates microbial diversity and function in an aquatic microecosystem},
+  author={Arellano, Aldo A and Young, Erica B and Coon, Kerri L},
+  journal={Molecular Ecology},
+  volume={33},
+  number={7},
+  pages={e17314},
+  year={2024}
+}
+
+@article{coe2024emergence,
+  title={Emergence of metabolic coupling to the heterotroph Alteromonas promotes dark survival in Prochlorococcus},
+  author={Coe, Allison and Braakman, Rogier and Biller, Steven J and Arellano, Aldo and Bliem, Christina and Vo, Nhi N and von Emster, Konnor and Thomas, Elaina and DeMers, Michelle and Steglich, Claudia and others},
+  journal={bioRxiv},
+  pages={2024--05},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
