--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,118 +1,6 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
-}
-
 @article{kremer2018gradual,
   title={Gradual plasticity alters population dynamics in variable environments: thermal acclimation in the green alga Chlamydomonas reinhartdii},
   author={Kremer, Colin T and Fey, Samuel B and Arellano, Aldo A and Vasseur, David A},
@@ -199,22 +87,26 @@
   publisher={Springer International Publishing Cham}
 }
 
-@article{becker2023novel,
+@article{becker2024novel,
   title={Novel isolates expand the physiological diversity of Prochlorococcus and illuminate its macroevolution},
   author={Becker, Jamie W and Pollak, Shaul and Berta-Thompson, Jessie W and Becker, Kevin W and Braakman, Rogier and Dooley, Keven D and Hackl, Thomas and Coe, Allison and Arellano, Aldo and LeGault, Kristen N and others},
-  journal={bioRxiv},
-  pages={2023--12},
-  year={2023},
-  publisher={Cold Spring Harbor Laboratory}
+  journal={Mbio},
+  volume={15},
+  number={11},
+  pages={e03497--23},
+  year={2024},
+  publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
 }
 
-@article{braakman2024global,
+@article{braakman2025global,
   title={Global niche partitioning of purine and pyrimidine cross-feeding among ocean microbes},
-  author={Braakman, Rogier and Satinsky, Brandon and O'Keefe, Tyler J and Longnecker, Krista and Becker, Jamie W and Dooley, Keven and Hogle, Shane L and Arellano, Aldo and Kido Soule, Melissa C and Kujawinski, Elizabeth B and others},
-  journal={bioRxiv},
-  pages={2024--02},
-  year={2024},
-  publisher={Cold Spring Harbor Laboratory}
+  author={Braakman, Rogier and Satinsky, Brandon and O’Keefe, Tyler J and Longnecker, Krista and Hogle, Shane L and Becker, Jamie W and Li, Robert C and Dooley, Keven and Arellano, Aldo and Kido Soule, Melissa C and others},
+  journal={Science Advances},
+  volume={11},
+  number={1},
+  pages={eadp1949},
+  year={2025},
+  publisher={American Association for the Advancement of Science}
 }
 
 @article{arellano2024inquiline,
@@ -230,9 +122,11 @@
 @article{coe2024emergence,
   title={Emergence of metabolic coupling to the heterotroph Alteromonas promotes dark survival in Prochlorococcus},
   author={Coe, Allison and Braakman, Rogier and Biller, Steven J and Arellano, Aldo and Bliem, Christina and Vo, Nhi N and von Emster, Konnor and Thomas, Elaina and DeMers, Michelle and Steglich, Claudia and others},
-  journal={bioRxiv},
-  pages={2024--05},
+  journal={ISME communications},
+  volume={4},
+  number={1},
+  pages={ycae131},
   year={2024},
-  publisher={Cold Spring Harbor Laboratory}
+  publisher={Oxford University Press}
 }
 
