--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -103,7 +103,8 @@
   number={1},
   pages={eadp1949},
   year={2025},
-  publisher={American Association for the Advancement of Science}
+  publisher={American Association for the Advancement of Science},
+  abstract={Cross-feeding involves microbes consuming exudates of other surrounding microbes, mediating elemental cycling. Characterizing the diversity of cross-feeding pathways in ocean microbes illuminates evolutionary forces driving self-organization of ocean ecosystems. Here, we uncover a purine and pyrimidine cross-feeding network in globally abundant groups. The cyanobacterium Prochlorococcus exudes both compound classes, which metabolic reconstructions suggest follows synchronous daily genome replication. Co-occurring heterotrophs differentiate into purine- and pyrimidine-using generalists or specialists that use compounds for different purposes. The most abundant heterotroph, SAR11, is a specialist that uses purines as sources of energy, carbon, and/or nitrogen, with subgroups differentiating along ocean-scale gradients in the supply of energy and nitrogen, in turn producing putative cryptic nitrogen cycles that link many microbes. Last, in an SAR11 subgroup that dominates where Prochlorococcus is abundant, adenine additions to cultures inhibit DNA synthesis, poising cells for replication. We argue that this subgroup uses inferred daily adenine pulses from Prochlorococcus to synchronize to the daily photosynthate supply from surrounding phytoplankton.}
 }
 
 @article{arellano2024inquiline,
