--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,8 @@
   number={1870},
   pages={20171942},
   year={2018},
-  publisher={The Royal Society}
+  publisher={The Royal Society},
+  abstract={Environmental variability is ubiquitous, but its effects on populations are not fully understood or predictable. Recent attention has focused on how rapid evolution can impact ecological dynamics via adaptive trait change. However, the impact of trait change arising from plastic responses has received less attention, and is often assumed to optimize performance and unfold on a separate, faster timescale than ecological dynamics. Challenging these assumptions, we propose that gradual plasticity is important for ecological dynamics, and present a study of the plastic responses of the freshwater green algae Chlamydomonas reinhardtii as it acclimates to temperature changes. First, we show that C. reinhardtii's gradual acclimation responses can both enhance and suppress its performance after a perturbation, depending on its prior thermal history. Second, we demonstrate that where conventional approaches fail to predict the population dynamics of C. reinhardtii exposed to temperature fluctuations, a new model of gradual acclimation succeeds. Finally, using high-resolution data, we show that phytoplankton in lake ecosystems can experience thermal variation sufficient to make acclimation relevant. These results challenge prevailing assumptions about plasticity's interactions with ecological dynamics. Amidst the current emphasis on rapid evolution, it is critical that we also develop predictive methods accounting for plasticity.}
 }
 
 @article{coe2021coping,
@@ -17,7 +18,8 @@
   number={9},
   pages={3300--3312},
   year={2021},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={The picocyanobacteria Prochlorococcus and Synechococcus are found throughout the ocean's euphotic zone, where the daily light:dark cycle drives their physiology. Periodic deep mixing events can, however, move cells below this region, depriving them of light for extended periods of time. Here, we demonstrate that members of these genera can adapt to tolerate repeated periods of light energy deprivation. Strains kept in the dark for 3 d and then returned to the light initially required 18–26 d to resume growth, but after multiple rounds of dark exposure they began to regrow after only 1–2 d. This dark-tolerant phenotype was stable and heritable; some cultures retained the trait for over 132 generations even when grown in a standard 13:11 light:dark cycle. We found no genetic differences between the dark-tolerant and parental strains of Prochlorococcus NATL2A, indicating that an epigenetic change is likely responsible for the adaptation. To begin to explore this possibility, we asked whether DNA methylation—one potential mechanism mediating epigenetic inheritance in bacteria—occurs in Prochlorococcus. LC–MS/MS analysis showed that while DNA methylations, including 6 mA and 5 mC, are found in some other Prochlorococcus strains, there were no methylations detected in either the parental or dark-tolerant NATL2A strains. These findings suggest that Prochlorococcus utilizes a yet-to-be-determined epigenetic mechanism to adapt to the stress of extended light energy deprivation, and highlights phenotypic heterogeneity as an additional dimension of Prochlorococcus diversity.}
 }
 
 @article{laurenceau2020frequency,
@@ -26,7 +28,8 @@
   journal={The ISME Journal},
   pages={1--12},
   year={2020},
-  publisher={Nature Publishing Group}
+  publisher={Nature Publishing Group},
+  abstract={Prochlorococcus cells are the numerically dominant phototrophs in the open ocean. Cyanophages that infect them are a notable fraction of the total viral population in the euphotic zone, and, as vehicles of horizontal gene transfer, appear to drive their evolution. Here we examine the propensity of three cyanophages—a podovirus, a siphovirus, and a myovirus—to mispackage host DNA in their capsids while infecting Prochlorococcus, the first step in phage-mediated horizontal gene transfer. We find the mispackaging frequencies are distinctly different among the three phages. Myoviruses mispackage host DNA at low and seemingly fixed frequencies, while podo- and siphoviruses vary in their mispackaging frequencies by orders of magnitude depending on growth light intensity. We link this difference to the concentration of intracellular reactive oxygen species and protein synthesis rates, both parameters increasing in response to higher light intensity. Based on our findings, we propose a model of mispackaging frequency determined by the imbalance between the production of capsids and the number of phage genome copies during infection: when protein synthesis rate increase to levels that the phage cannot regulate, they lead to an accumulation of empty capsids, in turn triggering more frequent host DNA mispackaging errors.}
 }
 
 @article{biller2022prochlorococcus,
@@ -37,7 +40,8 @@
   number={1},
   pages={420--435},
   year={2022},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA}
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={Extracellular vesicles are small (~50–200 nm diameter) membrane-bound structures released by cells from all domains of life. While vesicles are abundant in the oceans, their functions, both for cells themselves and the emergent ecosystem, remain a mystery. To better characterize these particles – a prerequisite for determining function – we analysed the lipid, protein, and metabolite content of vesicles produced by the marine cyanobacterium Prochlorococcus. We show that Prochlorococcus exports a diverse array of cellular compounds into the surrounding seawater enclosed within discrete vesicles. Vesicles produced by two different strains contain some materials in common, but also display numerous strain-specific differences, reflecting functional complexity within vesicle populations. The vesicles contain active enzymes, indicating that they can mediate extracellular biogeochemical reactions in the ocean. We further demonstrate that vesicles from Prochlorococcus and other bacteria associate with diverse microbes including the most abundant marine bacterium, Pelagibacter. Together, our data point toward hypotheses concerning the functional roles of vesicles in marine ecosystems including, but not limited to, possibly mediating energy and nutrient transfers, catalysing extracellular biochemical reactions, and mitigating toxicity of reactive oxygen species.}
 }
 
 @article{hackl2023novel,
@@ -48,7 +52,8 @@
   number={1},
   pages={47--62},
   year={2023},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  abstract={Horizontal gene transfer accelerates microbial evolution. The marine picocyanobacterium Prochlorococcus exhibits high genomic plasticity, yet the underlying mechanisms are elusive. Here, we report a novel family of DNA transposons-"tycheposons"-some of which are viral satellites while others carry cargo, such as nutrient-acquisition genes, which shape the genetic variability in this globally abundant genus. Tycheposons share distinctive mobile-lifecycle-linked hallmark genes, including a deep-branching site-specific tyrosine recombinase. Their excision and integration at tRNA genes appear to drive the remodeling of genomic islands-key reservoirs for flexible genes in bacteria. In a selection experiment, tycheposons harboring a nitrate assimilation cassette were dynamically gained and lost, thereby promoting chromosomal rearrangements and host adaptation. Vesicles and phage particles harvested from seawater are enriched in tycheposons, providing a means for their dispersal in the wild. Similar elements are found in microbes co-occurring with Prochlorococcus, suggesting a common mechanism for microbial diversification in the vast oligotrophic oceans.}
 }
 
 @article{biller2023environmental,
