--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,7 +53,8 @@
   pages={47--62},
   year={2023},
   publisher={Elsevier},
-  abstract={Horizontal gene transfer accelerates microbial evolution. The marine picocyanobacterium Prochlorococcus exhibits high genomic plasticity, yet the underlying mechanisms are elusive. Here, we report a novel family of DNA transposons-"tycheposons"-some of which are viral satellites while others carry cargo, such as nutrient-acquisition genes, which shape the genetic variability in this globally abundant genus. Tycheposons share distinctive mobile-lifecycle-linked hallmark genes, including a deep-branching site-specific tyrosine recombinase. Their excision and integration at tRNA genes appear to drive the remodeling of genomic islands-key reservoirs for flexible genes in bacteria. In a selection experiment, tycheposons harboring a nitrate assimilation cassette were dynamically gained and lost, thereby promoting chromosomal rearrangements and host adaptation. Vesicles and phage particles harvested from seawater are enriched in tycheposons, providing a means for their dispersal in the wild. Similar elements are found in microbes co-occurring with Prochlorococcus, suggesting a common mechanism for microbial diversification in the vast oligotrophic oceans.}
+  abstract={Horizontal gene transfer accelerates microbial evolution. The marine picocyanobacterium Prochlorococcus exhibits high genomic plasticity, yet the underlying mechanisms are elusive. Here, we report a novel family of DNA transposons-"tycheposons"-some of which are viral satellites while others carry cargo, such as nutrient-acquisition genes, which shape the genetic variability in this globally abundant genus. Tycheposons share distinctive mobile-lifecycle-linked hallmark genes, including a deep-branching site-specific tyrosine recombinase. Their excision and integration at tRNA genes appear to drive the remodeling of genomic islands-key reservoirs for flexible genes in bacteria. In a selection experiment, tycheposons harboring a nitrate assimilation cassette were dynamically gained and lost, thereby promoting chromosomal rearrangements and host adaptation. Vesicles and phage particles harvested from seawater are enriched in tycheposons, providing a means for their dispersal in the wild. Similar elements are found in microbes co-occurring with Prochlorococcus, suggesting a common mechanism for microbial diversification in the vast oligotrophic oceans.},
+  html={https://news.mit.edu/2023/genetic-information-transfer-ocean-microbe-0105}
 }
 
 @article{biller2023environmental,
@@ -109,7 +110,8 @@
   pages={eadp1949},
   year={2025},
   publisher={American Association for the Advancement of Science},
-  abstract={Cross-feeding involves microbes consuming exudates of other surrounding microbes, mediating elemental cycling. Characterizing the diversity of cross-feeding pathways in ocean microbes illuminates evolutionary forces driving self-organization of ocean ecosystems. Here, we uncover a purine and pyrimidine cross-feeding network in globally abundant groups. The cyanobacterium Prochlorococcus exudes both compound classes, which metabolic reconstructions suggest follows synchronous daily genome replication. Co-occurring heterotrophs differentiate into purine- and pyrimidine-using generalists or specialists that use compounds for different purposes. The most abundant heterotroph, SAR11, is a specialist that uses purines as sources of energy, carbon, and/or nitrogen, with subgroups differentiating along ocean-scale gradients in the supply of energy and nitrogen, in turn producing putative cryptic nitrogen cycles that link many microbes. Last, in an SAR11 subgroup that dominates where Prochlorococcus is abundant, adenine additions to cultures inhibit DNA synthesis, poising cells for replication. We argue that this subgroup uses inferred daily adenine pulses from Prochlorococcus to synchronize to the daily photosynthate supply from surrounding phytoplankton.}
+  abstract={Cross-feeding involves microbes consuming exudates of other surrounding microbes, mediating elemental cycling. Characterizing the diversity of cross-feeding pathways in ocean microbes illuminates evolutionary forces driving self-organization of ocean ecosystems. Here, we uncover a purine and pyrimidine cross-feeding network in globally abundant groups. The cyanobacterium Prochlorococcus exudes both compound classes, which metabolic reconstructions suggest follows synchronous daily genome replication. Co-occurring heterotrophs differentiate into purine- and pyrimidine-using generalists or specialists that use compounds for different purposes. The most abundant heterotroph, SAR11, is a specialist that uses purines as sources of energy, carbon, and/or nitrogen, with subgroups differentiating along ocean-scale gradients in the supply of energy and nitrogen, in turn producing putative cryptic nitrogen cycles that link many microbes. Last, in an SAR11 subgroup that dominates where Prochlorococcus is abundant, adenine additions to cultures inhibit DNA synthesis, poising cells for replication. We argue that this subgroup uses inferred daily adenine pulses from Prochlorococcus to synchronize to the daily photosynthate supply from surrounding phytoplankton.},
+  html={https://news.mit.edu/2025/abundant-phytoplankton-feeds-marine-microbe-global-network-0103}
 }
 
 @article{arellano2024inquiline,
