--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -65,7 +65,8 @@
   number={6},
   pages={e00594--23},
   year={2023},
-  publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
+  publisher={American Society for Microbiology 1752 N St., NW, Washington, DC},
+  abstract={Extracellular vesicles are small (approximately 50 to 250 nm in diameter), membrane-bound structures that are released by cells into their surrounding environment. Heterogeneous populations of vesicles are abundant in the global oceans, and they likely play a number of ecological roles in these microbially dominated ecosystems. Here, we examine how vesicle production and size vary among different strains of cultivated marine microbes as well as explore the degree to which this is influenced by key environmental variables. We show that both vesicle production rates and vesicle sizes significantly differ among cultures of marine Proteobacteria, Cyanobacteria, and Bacteroidetes. Further, these properties vary within individual strains as a function of differences in environmental conditions, such as nutrients, temperature, and light irradiance. Thus, both community composition and the local abiotic environment are expected to modulate the production and standing stock of vesicles in the oceans. Examining samples from the oligotrophic North Pacific Gyre, we show depth-dependent changes in the abundance of vesicle-like particles in the upper water column in a manner that is broadly consistent with culture observations: the highest vesicle abundances are found near the surface, where the light irradiances and the temperatures are the greatest, and they then decrease with depth. This work represents the beginnings of a quantitative framework for describing extracellular vesicle dynamics in the oceans, which is essential as we begin to incorporate vesicles into our ecological and biogeochemical understanding of marine ecosystems. Bacteria release extracellular vesicles that contain a wide variety of cellular compounds, including lipids, proteins, nucleic acids, and small molecules, into their surrounding environment. These structures are found in diverse microbial habitats, including the oceans, where their distributions vary throughout the water column and likely affect their functional impacts within microbial ecosystems. Using a quantitative analysis of marine microbial cultures, we show that bacterial vesicle production in the oceans is shaped by a combination of biotic and abiotic factors. Different marine taxa release vesicles at rates that vary across an order of magnitude, and vesicle production changes dynamically as a function of environmental conditions. These findings represent a step forward in our understanding of bacterial extracellular vesicle production dynamics and provide a basis for the quantitative exploration of the factors that shape vesicle dynamics in natural ecosystems.}
 }
 
 @article{arellano2022bacterial,
@@ -76,7 +77,8 @@
   number={1},
   pages={13},
   year={2022},
-  publisher={BioMed Central London}
+  publisher={BioMed Central London},
+  abstract={The leaves of carnivorous pitcher plants harbor diverse communities of inquiline species, including bacteria and larvae of the pitcher plant mosquito (Wyeomyia smithii), which aid the plant by processing captured prey. Despite the growing appreciation for this microecosystem as a tractable model in which to study food web dynamics and the moniker of W. smithii as a ‘keystone predator’, very little is known about microbiota acquisition and assembly in W. smithii mosquitoes or the impacts of W. smithii-microbiota interactions on mosquito and/or plant fitness. In this study, we used high throughput sequencing of bacterial 16S rRNA gene amplicons to characterize and compare microbiota diversity in field- and laboratory-derived W. smithii larvae. We then conducted controlled experiments in the laboratory to better understand the factors shaping microbiota acquisition and persistence across the W. smithii life cycle. Methods were also developed to produce axenic (microbiota-free) W. smithii larvae that can be selectively recolonized with one or more known bacterial species in order to study microbiota function. Our results support a dominant role for the pitcher environment in shaping microbiota diversity in W. smithii larvae, while also indicating that pitcher-associated microbiota can persist in and be dispersed by adult W. smithii mosquitoes. We also demonstrate the successful generation of axenic W. smithii larvae and report variable fitness outcomes in gnotobiotic larvae monocolonized by individual bacterial isolates derived from naturally occurring pitchers in the field. This study provides the first information on microbiota acquisition and assembly in W. smithii mosquitoes. This study also provides the first evidence for successful microbiota manipulation in this species. Altogether, our results highlight the value of such methods for studying host-microbiota interactions and lay the foundation for future studies to understand how W. smithii-microbiota interactions shape the structure and stability of this important model ecosystem.}
 }
 
 @article{arellano2023beyond,
@@ -87,7 +89,8 @@
   number={1},
   pages={165--188},
   year={2023},
-  publisher={Springer International Publishing Cham}
+  publisher={Springer International Publishing Cham},
+  abstract={Vector-borne diseases constitute a major global public health threat. The most significant arthropod disease vectors are predominantly comprised of members of the insect order Diptera (true flies), which have long been the focus of research into host-pathogen dynamics. Recent studies have revealed the underappreciated diversity and function of dipteran-associated gut microbial communities, with important implications for dipteran physiology, ecology, and pathogen transmission. However, the effective parameterization of these aspects into epidemiological models will require a comprehensive study of microbe-dipteran interactions across vectors and related species. Here, we synthesize recent research into microbial communities associated with major families of dipteran vectors and highlight the importance of development and expansion of experimentally tractable models across Diptera towards understanding the functional roles of the gut microbiota in modulating disease transmission. We then posit why further study of these and other dipteran insects is not only essential to a comprehensive understanding of how to integrate vector-microbiota interactions into existing epidemiological frameworks, but our understanding of the ecology and evolution of animal-microbe symbiosis more broadly.}
 }
 
 @article{becker2024novel,
@@ -98,7 +101,8 @@
   number={11},
   pages={e03497--23},
   year={2024},
-  publisher={American Society for Microbiology 1752 N St., NW, Washington, DC}
+  publisher={American Society for Microbiology 1752 N St., NW, Washington, DC},
+  abstract={Prochlorococcus is a diverse picocyanobacterial genus and the most abundant phototroph on Earth. Its photosynthetic diversity divides it into high-light (HL)- or low-light (LL)-adapted groups representing broad phylogenetic grades—each composed of several monophyletic clades. Here, we physiologically characterize four new Prochlorococcus strains isolated from below the deep chlorophyll maximum in the North Pacific Ocean. We combine these physiological properties with genomic analyses to explore the evolution of photosynthetic antennae and discuss potential macroevolutionary implications. The isolates belong to deeply branching low-light-adapted clades that have no other cultivated representatives and display some unusual characteristics. For example, despite its otherwise low-light-adapted physiological characteristics, strain MIT1223 has low chl b2 content similar to high-light-adapted strains. Isolate genomes revealed that each strain contains a unique arsenal of pigment biosynthesis and binding alleles that have been horizontally acquired, contributing to the observed physiological diversity. Comparative genomic analysis of all picocyanobacteria reveals that Pcb, the major pigment carrying protein in Prochlorococcus, greatly increased in copy number and diversity per genome along a branch that coincides with the loss of facultative particle attachment. Collectively, these observations support a recently developed macroevolutionary model, in which niche-constructing radiations allowed ancestral lineages of picocyanobacteria to transition from a particle-attached to planktonic lifestyle and broadly colonize the euphotic zone.}
 }
 
 @article{braakman2025global,
@@ -121,7 +125,8 @@
   volume={33},
   number={7},
   pages={e17314},
-  year={2024}
+  year={2024},
+  abstract={Understanding microbial roles in ecosystem function requires integrating microscopic processes into food webs. The carnivorous pitcher plant, Sarracenia purpurea, offers a tractable study system where diverse food webs of macroinvertebrates and microbes facilitate digestion of captured insect prey, releasing nutrients supporting the food web and host plant. However, how interactions between these macroinvertebrate and microbial communities contribute to ecosystem functions remains unclear. We examined the role of the pitcher plant mosquito, Wyeomyia smithii, in top-down control of the composition and function of pitcher plant microbial communities. Mosquito larval abundance was enriched or depleted across a natural population of S. purpurea pitchers over a 74-day field experiment. Bacterial community composition and microbial community function were characterized by 16S rRNA amplicon sequencing and profiling of carbon substrate use, bulk metabolic rate, hydrolytic enzyme activity, and macronutrient pools. Bacterial communities changed from pitcher opening to maturation, but larvae exerted minor effects on high-level taxonomic composition. Higher larval abundance was associated with lower diversity communities with distinct functions and elevated nitrogen availability. Treatment-independent clustering also supported roles for larvae in curating pitcher microbial communities through shifts in community diversity and function. These results demonstrate top-down control of microbial functions in an aquatic microecosystem. }
 }
 
 @article{coe2024emergence,
@@ -132,5 +137,6 @@
   number={1},
   pages={ycae131},
   year={2024},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  abstract={Prochlorococcus is found throughout the euphotic zone in the oligotrophic open ocean. Deep mixing and sinking while attached to particles can, however, transport Prochlorococcus cells below this sunlit zone, depriving them of light for extended periods of time. Previous work has shown that Prochlorococcus by itself cannot survive extended periods of darkness. However, when co-cultured with a heterotrophic microbe and subjected to repeated periods of extended darkness, Prochlorococcus cells develop an epigenetically inherited dark-tolerant phenotype that can survive longer periods of darkness. Here we examine the metabolic and physiological changes underlying this adaptation using co-cultures of dark-tolerant and parental strains of Prochlorococcus, each grown with the heterotroph Alteromonas under diel light:dark conditions. The relative abundance of Alteromonas was higher in dark-tolerant than parental co-cultures, while dark-tolerant Prochlorococcus cells were larger, contained less chlorophyll, and were less synchronized to the light:dark cycle. Meta-transcriptome analysis revealed that dark-tolerant co-cultures undergo a joint change, in which Prochlorococcus undergoes a relative shift from photosynthesis to respiration, while Alteromonas shifts toward using more organic acids instead of sugars. Furthermore, the transcriptome data suggested enhanced biosynthesis of amino acids and purines in dark-tolerant Prochlorococcus and enhanced degradation of these compounds in Alteromonas. Collectively, our results demonstrate that dark adaptation involves a strengthening of the metabolic coupling between Prochlorococcus and Alteromonas, presumably mediated by an enhanced, and compositionally modified, carbon exchange between the two species. }
 }
